# Mykonos-os

./: .env  .env.example  .env.prod.example  .gitignore  .prettierrc.yaml  AUTHENTICATION_README.md  BRANCH_SWITCHING_READY.md  CALCULO_AUTOMATICO_PRECIOS.md  CHANGES_SUMMARY.md  CODIGOS_BARRAS_VARIANTES_README.md  DEPLOYMENT.md  DISEÑO_FORMULARIO_MEJORAS.md  EMPLOYEE_STORAGE_FIX_SUMMARY.md  ENDPOINTS_POSTGRESQL_MIGRATION_SUMMARY.md  ENDPOINT_COMPATIBILITY_REPORT.md  EXCHANGE_SYSTEM_GUIDE.py  FLUJO_PRUEBA_INVENTARIO.md  FRONTEND_BACKEND_INTEGRATION.md  GRUPOS_JERARQUICOS_IMPLEMENTACION.md  GUIA_ENVIOS_PENDIENTES.md  HYBRID_UI_GUIDE.md  IMPLEMENTACION_INVENTARIO_COMPLETA.md  INVENTARIO_MUCHOS_A_MUCHOS_README.md  MEJORAS_ENVIOS_PENDIENTES.md  MEJORA_AUTO_SELECCION_DESTINO.md  MODAL_IMPRESION_CODIGOS.md  POSTGRESQL_SETUP_GUIDE.md  PROVIDER_BALANCE_SYSTEM.md  README.md  RELACIONES_MUCHOS_A_MUCHOS_README.md  SERVICES_POSTGRESQL_VERIFICATION.md  SISTEMA_INTERCAMBIOS_RESUMEN.md  SISTEMA_MULTI_PRODUCTO_COMPLETADO.md  SOLUCION_PRODUCTOS_PENDIENTES.md  SUCURSALES_README.md  SUCURSALES_STATUS.md  USER_CREATION_FIX_SUMMARY.md  add_variant_fields_to_movements.sql  aokdfnouiac  check_barcodes.py  (+108 more)
src/backend/: .env  API_ENDPOINTS_SUMMARY.md  Dockerfile.prod  INSTRUCTIONS_FIX_LOGIN.py  admin_manager.py  barcode_final_fix.py  barcode_generator.py  check_admin.py  check_and_fix_barcodes.py  check_barcode_lib.py  check_constraints.py  check_database.py  check_db_status.py  check_products_table.py  check_storage.py  check_storages.py  check_table.py  check_variants_data.py  clean_and_test.py  (+106 more)
(+251 files in other folders)
